apps/adguard/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dns-system
  labels:
    istio.io/dataplane-mode: ambient
