apps/adguard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-dns
  namespace: dns-system
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.201
  clusterIP: 10.43.6.74
  ports:
    - port: 53
      targetPort: 53
      protocol: UDP
      name: dns-udp
    - port: 80
      targetPort: 80
      name: web-http
    - port: 3000
      targetPort: 3000
      name: setup-http
  selector:
    app: adguard
