apps/adguard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-ingress
  namespace: dns-system
spec:
  rules:
    - host: adguard.dc.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard-dns
                port:
                  name: web-http
